CartForm overflow fixed

--- a/src/components/Cart/CartForm/CartForm/CartForm.module.css
+++ b/src/components/Cart/CartForm/CartForm/CartForm.module.css
@@ -1,3 +1,7 @@
+.cart-form {
+    overflow: auto;
+}
+
 .cart-form button {
     font: inherit;
     cursor: pointer;
